--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     padding: 25px 5px 10px 5px;
     height: 550px;
     width: 400px;
-    border: 4px solid black;
+    border: 4px solid rgb(41, 41, 155);
     background-color: rgb(41, 41, 155);
     border-radius: 10px;
 }
@@ -12,6 +12,8 @@
 p {
     margin: 0px 0px;
     font-size: 50px;
+    /* font-size: 2em; */
+    /* font-size: 23.75px; */
 }
 
 #display-container {
@@ -38,6 +40,7 @@ p {
 button {
     height: 75px;
     width: 85px;
+    text-align: center;
     font-size: 30px;
     border-radius: 10px;
 }
