--- a/style.css
+++ b/style.css
@@ -12,8 +12,6 @@
 p {
     margin: 0px 0px;
     font-size: 50px;
-    /* font-size: 2em; */
-    /* font-size: 23.75px; */
 }
 
 #display-container {
@@ -43,6 +41,8 @@ button {
     text-align: center;
     font-size: 30px;
     border-radius: 10px;
+    border: none;
+    outline: none;
 }
 
 button:active {
