--- a/style.css
+++ b/style.css
@@ -62,3 +62,35 @@ button:active {
     background-color: rgb(255, 132, 132);
     color: white;
 }
+
+@media screen and (min-width: 480px) {
+    .calculator-container {
+        height: auto;
+        width: 90vw;
+    }
+
+    p {
+        font-size: 5vw;
+    }
+
+    button {
+        height: 18vw;
+        width: 18vw;
+        font-size: 9vw;
+    }
+    
+    #display-container {
+        line-height: 100vw;
+    }
+    
+    #display {
+        margin: auto;
+        width: 95%;
+        height: 16vw;
+    }
+    
+    .button-rows {
+        width: 100%;
+        height: 18vw;
+    }
+}
